--- a/css/estiloMovil.css
+++ b/css/estiloMovil.css
@@ -8,29 +8,48 @@ body{
     width:100vw;
     height:100vh;
     display:flex;
-    background: #FFFFFF;
+    align-items: center;
+    justify-content: center;
+    background-image: url(../img/animado.gif);
+    background-position: center;
 }
 
-.parteDerecha{
-    width:50%; 
-    height:100vh; 
-    display:flex; 
-    align-items:center; 
-    flex-direction:column;
+h2{
+    text-align: center;
 }
 
-.parteIzquierda{
-    width: 100%; 
-    height:100%;
+footer{
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 10%;
+    background-color: #FFFF;
+    color: black;
+    padding: 15px;  
+    box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+footer>img{
+    
 }
 
 .formulario{
-    width:50%; 
-    height:50%; 
+    width:80vw; 
+    height:80vh; 
     display:flex; 
     align-items:center; 
     flex-direction:column; 
-    justify-content: space-between; 
-    background-color:snow; 
-    box-shadow:0px 0px 17px pink, 0px 0px 21px purple; border-radius:10px;
+    background-color: rgba(0, 0, 0, 0.2); 
+}
+
+.formulario>input{
+    width: 50%;
+    height: 10%;
+    text-align: center;
+    margin: 20px;
 }
