--- a/css/estiloMovil.css
+++ b/css/estiloMovil.css
@@ -5,13 +5,23 @@
     font-family: Poppins,'Arial';
 }
 
-body{
+:root {
+    --Amarillo: #EFBC0C;
+    --Verde: #2C8221;
+    --Azul: #0A4E92;
+    --Negro: #000000;
+    --Gris-oscuro: #808080;
+    --Gris-claro: #EFEFEF;
+    --Blanco: #FFFFFF;
+}
+
+.GRP1-body{
     width:100vw;
     height:100vh;
     display:flex;
     align-items: center;
     justify-content: center;
-    background-color: #EFEFEF;
+    background-color: var(--Gris-claro);
     /* Fondo #EFEFEF */
     background-image: url(../img/version_1.gif);
     background-size: 500%;
@@ -19,24 +29,24 @@ body{
     background-position: bottom;
 }
 
-.formulario{
+.GRP1-formulario{
     width:80vw; 
     height:80vh; 
     display:flex; 
     align-items:center; 
     flex-direction:column; 
-    background-color: rgba(0, 0, 0, 0.2); 
+    background-color: rgba(0, 0, 0, 0.3); 
     margin-bottom: 20%;
 }
 
-.formulario>h2{
+.GRP1-formulario>h2{
     padding-top: 20px;
     padding-bottom: 20px;
     text-align: center;
     font-size: xx-large;
 }
 
-.formulario>input{
+.GRP1-formulario>input{
     width: 70%;
     height: 10%;
     text-align: center;
@@ -45,26 +55,40 @@ body{
     border-style: none;
 }
 
-.formulario>input[type=button]{
-    background-color: #0A4E92;
+.GRP1-contrasenya{
+    display: flex;
+    flex-direction: row;
+    width: 70%;
+    height: 10%;
+    border-style: none;
 }
 
-.formulario>input:hover{
+.GRP1-contrasenya>input{
+    width: 100vw;
+    text-align: center;
+    border-radius: 10px;
+    border-style: none;
+}
+
+.GRP1-formulario>input[type=button]{
+    background-color: var(--Azul);
+}
+
+.GRP1-formulario>input:hover{
     transition: 0.5S ;
-    background-color: #808080;
-    color: white;
+    background-color: var(--Gris-oscuro);
+    color: var(--Blanco);
     cursor: pointer;
 }
 
-
-footer{
+#GRP1-footer{
     position: fixed;
     bottom: 0;
     width: 100%;
     height: 10%;
-    background-color: white;
+    background-color: var(--Blanco);
     /* Barra Navegación Blanca */
-    color: black;
+    color: var(--Negro);
     padding: 15px;  
     box-shadow: 0 3px 7px 0 rgba(128, 128, 128, 0.2);
     /* Sombra #808080 */
