--- a/public/src/css/estilos.css
+++ b/public/src/css/estilos.css
@@ -31,6 +31,16 @@ body{
     font-family: Poppins, sans-serif;;
 }
 
+main {
+    width: 100vw;
+    display: flex;
+    align-items: center;
+}
+
+section {
+    width: 50%;
+}
+
 article {
     display: flex;
     flex-direction: column;
