--- a/src/views/css/estilos.css
+++ b/src/views/css/estilos.css
@@ -80,6 +80,7 @@
     text-align: center;
     padding: 2%;
     margin-left: 2%;
+    border-radius: 10px;
     text-shadow: 1px 0px 0px #717171;
     cursor: pointer;
 }
@@ -87,6 +88,7 @@
 #GRP-navBar  a, a:enabled,a:visited,a:active {
     width: 150px;
     height: 35px;
+    border-radius: 10px;
     color: #000000;
     text-decoration: none;
     cursor: pointer;
@@ -496,7 +498,6 @@ section {
 .box-home-aspirante {
     width: 100vw;
     height: 100vh;
-    background-color: #05396ead;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(2,1.4fr);
@@ -528,11 +529,12 @@ section {
     align-items: start;
     flex-direction: column;
     font-size: 20px;
+    color: #07b4f896;
 }
 
 .box-imagen-perfil i {
     font-size: 50px;
-    color: var(--Blanco);
+    color: #07b4f896;
 }
 
 .box-aspirante-nav-bar {
@@ -556,7 +558,7 @@ section {
     width: 250px;
     border-radius: 5px;
     padding: 2%;
-    background-color: #efefef96;
+    background-color: #07b4f896;
     color: var(--Negro);
 }
 
@@ -578,8 +580,8 @@ section {
 .aspirante-nav-bar li:hover {
     transition: 0.2s all;
     background:none;
-    border: 1px solid var(--Blanco);
-    text-shadow: 0px 0px 4px var(--Blanco);
+    border: 1px solid var(--Negro);
+    text-shadow: 0px 0px 4px var(--Gris-oscuro);
     cursor: pointer;
     color: var(--Blanco);
 }
@@ -588,7 +590,7 @@ section {
     height: 100%;
     grid-column: 2/4;
     grid-row: 1/3;
-    background-color: #efefefb3;
+    background-color: #4f4f4f8f;
     padding: 2%;
 
 }
@@ -619,3 +621,39 @@ section {
     flex-direction: column;
     justify-content: space-around;
 }
+
+/* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+/* -------------------------VIEW CURRICULUM ASPIRANTES----------------------- */
+/* -------------------------------------------------------------------------- */
+/* -------------------------------------------------------------------------- */
+
+.container-vistas-aspirante {
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+}
+
+.box-content-curriculum {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.box-content-curriculum ul {
+    width: 50%;
+    height: 50%;
+    padding: 2%;
+    border-radius: 5px;
+    list-style: none;
+    background-color: #0000006e;
+    color: var(--Blanco);
+    text-shadow: 1px 0px 3px var(--Gris-oscuro);
+    font-weight: 600;
+}
+
