--- a/src/views/css/estilos.css
+++ b/src/views/css/estilos.css
@@ -614,31 +614,44 @@ section {
 
 }
 
+.boton-seleccionado {
+    background-color: #000000;
+    color: white;
+    font-weight: 800;
+}
+
 /* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- */
 /* -----------------------------VIEW CURRICULUM------------------------------ */
 /* -------------------------------------------------------------------------- */
 /* -------------------------------------------------------------------------- */
 
-.container-creacion-curriculum {
-    width: 100vw;
+#container-creacion-curriculum {
+    width: 100%;
     height: 100vh;
     padding: 1%;
     font-weight: 600;
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(2,1.4fr);
+    display: none;
+    flex-direction: column;
+    align-items: center;
 }
 
 .box-inputs {
-    grid-column: 1/2;
-    grid-row: 1/3;
     width: 100%;
     height: 100%;
     display: flex;
     align-items: justify;
     flex-direction: column;
     justify-content: space-around;
+}
+
+.box-inputs input {
+    width: 300px;
+    border-radius: 5px;
+    padding: 1%;
+    margin-top: 2%;
+    font-size: 18px;
+    font-weight: bold;
 }
 
 /* -------------------------------------------------------------------------- */
