--- a/src/views/css/index.css
+++ b/src/views/css/index.css
@@ -53,6 +53,7 @@
     justify-content: space-around;
     color: white;
     text-shadow: 1px 0px 7px var(--Negro);
+    background-color: #000000;
 }
 
 .title-page-header {
@@ -77,8 +78,9 @@
     font-size: 10px;
     color: var(--Blanco);
     cursor: pointer;
-    text-shadow: 1px 0px 7px var(--Negro);
+    text-shadow: 1px 0px 5px var(--Negro);
 }
+
 
 .list-content-header .content:hover a, .list-content-header .content:hover i {
     color: #EFBC0C;
